--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
+
+/* globals.css */
+@font-face {
+  font-family: 'Coluna';
+  src: url('/fonts/Coluna-CondensedBold.woff2') format('woff2');
+  font-weight:normal;
+  font-style: normal;
+  font-display: swap; /* Optional: Ensures text is visible while the font loads */
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -27,3 +37,11 @@ body {
     left: -200px;
   }
 }
+
+
+/* .montserrat {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+} */
