--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
 @import url("https://fonts.cdnfonts.com/css/general-sans");
 
 /* globals.css */
@@ -25,17 +24,13 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
-  }
 }
 body.admin-panel {
   --foreground: 0 0% 3.9%;
   --background: 0 0% 100%;
 }
 
-@layer base {
-  :root {
-    --radius: 0.5rem;
-  }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -74,13 +69,19 @@ body.admin-panel {
 }
 
 @layer base {
+  :root {
+    --radius: 0.5rem;
+  }
+
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
+
 
 @keyframes scrollLeft {
   to {
@@ -111,7 +112,7 @@ body.admin-panel {
   font-style: normal;
 } */
 
-@media screen and (max-width) {
+@media screen and (max-width: 768px) {
   .shop {
     height: 60vh;
   }
